--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,8 +21,8 @@
         android:gravity="center_vertical">
 
 <ImageView
-    android:layout_width="120dp"
-    android:layout_height="120dp"
+    android:layout_width="122dp"
+    android:layout_height="122dp"
     android:layout_gravity="center_horizontal"
      android:src="@drawable/logo_app"
      />
@@ -33,14 +33,14 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:paddingLeft="32dp"
+            android:paddingLeft="40dp"
             android:paddingRight="32dp"
             android:gravity="center">
 
             <!--Titutlo -->
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="32dp"
 
                 />
@@ -75,12 +75,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/white"
 
                 android:id="@+id/layout_contrasenia">
                 <EditText
                     android:id="@+id/input_contrasenia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+
 
                     android:textColor="#fff"
                     android:inputType="textPassword"
@@ -99,6 +101,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:layout_margin="@dimen/activity_vertical_margin"
+
             android:textColor="@color/colorPrimaryDark"
             android:maxLines="1"
             android:padding="12dp"
