--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
 
     android:layout_height="match_parent"
-    tools:context="pe.com.gmd.aprobaciones.view.SplashActivity">
+    tools:context="pe.com.gmd.dokkuapp.view.activity.SplashActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@mipmap/fondo_splash2"
+            android:src="@mipmap/dokku_splash"
             android:scaleType="centerCrop"/>
     </LinearLayout>
         <LinearLayout
@@ -27,8 +27,9 @@
             android:layout_centerHorizontal="true">
 
             <ImageView
-                android:layout_width="110dp"
-                android:layout_height="110dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:src="@mipmap/logo_dokku_splash"
                 android:id="@+id/imageView"
 
                 />
