--- a/app/src/main/res/layout/slide_three.xml
+++ b/app/src/main/res/layout/slide_three.xml
@@ -33,7 +33,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/image_slide_1"
+            android:src="@mipmap/logo_dokku_splash"
             android:layout_gravity="center_horizontal"
             android:paddingBottom="10dp" />
 
