--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:background="@color/colorSombra"
+                android:background="@drawable/fondo_color"
                 android:orientation="vertical"
                 android:layout_height="match_parent">
                 <LinearLayout
@@ -34,7 +34,7 @@
                         android:layout_width="130dp"
                         android:layout_height="130dp"
                         android:layout_gravity="center_horizontal"
-                        android:src="@mipmap/logo_dokku_splash"
+                        android:src="@mipmap/icon_logo_splash"
                         />
                     <!--Boton de Ingreso -->
 
