--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,11 +9,11 @@
     tools:context=".view.activity.LoginActivity">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="3"
-            android:background="@mipmap/dokku_splash"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="3"
+        android:background="@mipmap/dokku_splash"
+        android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:background="@drawable/fondo_color"
@@ -26,6 +26,10 @@
                     android:orientation="vertical"
                     android:gravity="center_vertical">
 
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -37,7 +41,6 @@
                         android:src="@mipmap/icon_logo_splash"
                         />
                     <!--Boton de Ingreso -->
-
 
                     <LinearLayout
                         android:layout_height="wrap_content"
@@ -118,9 +121,11 @@
                         android:padding="12dp"
                         android:paddingTop="18dp"
                         android:text="@string/texto_olvido_contrasena" />
+
+
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+    </LinearLayout>
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_ingreso"
         android:layout_width="match_parent"
