--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,13 +12,26 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_weight="3"
-        android:background="@mipmap/dokku_splash"
+        android:background="@drawable/fondo_color"
         android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_margin="40dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@mipmap/icon_logo_splash"
+            />
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_height="wrap_content" >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:background="@drawable/fondo_color"
+
                 android:orientation="vertical"
                 android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -26,20 +39,8 @@
                     android:orientation="vertical"
                     android:gravity="center_vertical">
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical" />
-                    <ImageView
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@mipmap/icon_logo_splash"
-                        />
+
                     <!--Boton de Ingreso -->
 
                     <LinearLayout
@@ -63,14 +64,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Usuario"
-                            android:textColor="#fff"
+                            android:textColor="#000"
                             />
 
                         <EditText
                             android:id="@+id/input_iniciar_sesion"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="#fff"
+                            android:textColor="#000"
 
                             android:singleLine="true"
                             android:inputType="text"
@@ -80,28 +81,27 @@
                         <!-- Cambiar Contraseña-->
                         <TextView
                             android:layout_width="match_parent"
-                            android:textColor="#fff"
+                            android:textColor="#000"
                             android:layout_height="wrap_content"
                             android:text="Contraseña"
                             />
+
                         <android.support.design.widget.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:passwordToggleEnabled="true"
-                            app:passwordToggleTint="@color/white"
+
 
                             android:id="@+id/layout_contrasenia">
                             <EditText
                                 android:id="@+id/input_contrasenia"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:textColor="#000"
 
 
-                                android:textColor="#fff"
                                 android:inputType="textPassword"
                                 android:imeOptions="actionDone"/>
                         </android.support.design.widget.TextInputLayout>
-
 
 
                         <!--Olvide contraseña-->
@@ -125,6 +125,8 @@
 
                 </LinearLayout>
             </LinearLayout>
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_ingreso"
