--- a/app/src/main/res/menu/activity_inicio_drawer.xml
+++ b/app/src/main/res/menu/activity_inicio_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/principal"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_directions_bus_black_24dp"
             android:title="Como llegar" />
 
         <item android:title="Metropolitano">
