--- a/app/src/main/res/layout/slide.xml
+++ b/app/src/main/res/layout/slide.xml
@@ -7,39 +7,10 @@
 
     >
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="0dp"
-        android:layout_weight="0.20"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/title_slide"
-            android:textStyle="bold"
-            android:textSize="@dimen/sp_text_slides"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="0.52">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/img_slide"
-            android:layout_gravity="center_horizontal"
-            android:paddingBottom="10dp" />
-
-    </LinearLayout>
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.28">
+        android:layout_marginTop="20dp"
+        android:layout_weight="0.2">
 
         <TextView
             android:layout_width="match_parent"
@@ -53,10 +24,32 @@
             android:layout_marginRight="40dp"
             android:gravity="center"
             />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        >
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="180dp"
+            android:id="@+id/title_slide"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.3">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="140dp"
+            android:id="@+id/img_slide"
+            android:src="@mipmap/slide_1"
+            android:layout_gravity="bottom"
+            />
 
     </LinearLayout>
-
-
 
 
 
