--- a/app/src/main/res/layout/fragment_informacion_general.xml
+++ b/app/src/main/res/layout/fragment_informacion_general.xml
@@ -4,79 +4,11 @@
     android:layout_height="match_parent"
     tools:context="pe.com.gmd.dokkuapp.view.fragment.InformacionGeneralFragment">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:id="@+id/rcvParaderos"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:padding="10dp"
-                android:text="Temperatura actual" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textColor="@color/colorPrimary"
-                android:textSize="80sp"
-                android:text="35°C"
-                android:id="@+id/textView2" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:padding="10dp"
-                android:text="Temperatura actual en los campos" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:paddingLeft="5dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@color/separacion"
-                android:layout_height="2dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:padding="10dp"
-                android:text="Humedad actual" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textColor="@color/colorPrimary"
-                android:textSize="80sp"
-                android:text="10 %"
-                android:id="@+id/txtHumedad" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:padding="10dp"
-                android:text="Humedad actual en los campos" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:paddingLeft="5dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@color/separacion"
-                android:layout_height="2dp"/>
-        </LinearLayout>
 
 
-
-
-    </LinearLayout>
+    </android.support.v7.widget.RecyclerView>
 </FrameLayout>
