--- a/app/src/main/res/layout/design_rutas.xml
+++ b/app/src/main/res/layout/design_rutas.xml
@@ -16,22 +16,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:background="@color/colorAccent"
-                    android:src="@mipmap/icon_estacion"
+                <android.support.v7.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="10dp"
                     >
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:textColor="#FFFFFF"
-                        android:scaleType="centerCrop"
-                        android:textSize="30sp"
-                        android:gravity="center"
-                        android:text="A"
-                        />
-                </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:background="@color/colorAccent"
+                        android:src="@mipmap/icon_estacion"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="#FFFFFF"
+                            android:scaleType="centerCrop"
+                            android:textSize="30sp"
+                            android:gravity="center"
+                            android:text="A"
+                            />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -60,7 +69,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="15sp"
                         android:textColor="@color/subtitulo"
-                        android:text="Mañana"
+                        android:text="Estaciones"
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -81,26 +90,73 @@
                 android:orientation="horizontal"
                 >
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_tarjeta"
-                    android:layout_marginRight="20dp"
-                    />
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_hora"
-                    />
+
+
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:textSize="15sp"
-                    android:layout_margin="8dp"
-                    android:textColor="@color/subtitulo"
-                    android:text="8:00 - 23:00"
-                    />
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:gravity="center"
+                    android:layout_marginRight="2dp"
+                    android:textSize="12sp"
+                    android:textColor="#fff"
+                    android:background="@drawable/fecha_round"
+                    android:text="L"/>
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:gravity="center"
+                    android:layout_marginRight="2dp"
+                    android:textSize="12sp"
+                    android:textColor="#fff"
+                    android:background="@drawable/fecha_round"
+                    android:text="M"/>
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:gravity="center"
+                    android:layout_marginRight="2dp"
+                    android:textSize="12sp"
+                    android:textColor="#fff"
+                    android:background="@drawable/fecha_round"
+                    android:text="X"/>
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:gravity="center"
+                    android:layout_marginRight="2dp"
+                    android:textSize="12sp"
+                    android:textColor="#fff"
+                    android:background="@drawable/fecha_round"
+                    android:text="J"/>
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:gravity="center"
+                    android:layout_marginRight="2dp"
+                    android:textSize="12sp"
+                    android:textColor="#fff"
+                    android:background="@drawable/fecha_round"
+                    android:text="V"/>
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:gravity="center"
+                    android:layout_marginRight="2dp"
+                    android:textSize="12sp"
+                    android:textColor="#fff"
+                    android:background="@drawable/fecha_round"
+                    android:text="S"/>
+                <TextView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:gravity="center"
+                    android:layout_marginRight="2dp"
+                    android:textSize="12sp"
+                    android:textColor="#fff"
+                    android:background="@drawable/fecha_round"
+                    android:text="D"/>
+
+
             </LinearLayout>
         </LinearLayout>
 
