--- a/app/src/main/res/layout/design_rutas.xml
+++ b/app/src/main/res/layout/design_rutas.xml
@@ -18,12 +18,12 @@
                 android:orientation="horizontal">
                 <android.support.v7.widget.CardView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     app:cardCornerRadius="10dp"
                     >
                     <LinearLayout
                         android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_height="match_parent"
                         android:background="@color/colorAccent"
                         android:src="@mipmap/icon_estacion"
                         >
@@ -54,29 +54,36 @@
                         android:maxLines="1"
                         android:textSize="23sp"
                         android:textColor="@color/titulo"
-                        android:text="TRONCAL A"
-                        android:id="@+id/textView2" />
+                        android:text="REGULAR A"
+                        android:id="@+id/txtServicio" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
+                        android:textSize="14sp"
+
                         android:textColor="@color/subtitulo"
-                        android:text="Mañana"
+                        android:text="Para en todas las estaciones."
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:textColor="@color/colorAccent"
+                        android:text="6:00AM-12:00PM   5:00PM- 11:00PM"
+                        android:drawableLeft="@drawable/ic_hora"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="15sp"
+                        android:gravity="center"
                         android:textColor="@color/subtitulo"
-                        android:text="Estaciones"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="15sp"
-                        android:textColor="@color/subtitulo"
-                        android:text="Mañana"
+                        android:text="Cada 30 minutos"
+                        android:drawableLeft="@drawable/ic_frecuencia"
                         />
                 </LinearLayout>
             </LinearLayout>
@@ -89,73 +96,76 @@
                 android:layout_marginRight="5dp"
                 android:orientation="horizontal"
                 >
-
-
-
                 <TextView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:gravity="center"
                     android:layout_marginRight="2dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textColor="#fff"
                     android:background="@drawable/fecha_round"
+                    android:id="@+id/d1"
                     android:text="L"/>
                 <TextView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:gravity="center"
                     android:layout_marginRight="2dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textColor="#fff"
                     android:background="@drawable/fecha_round"
+                    android:id="@+id/d2"
                     android:text="M"/>
                 <TextView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:gravity="center"
                     android:layout_marginRight="2dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textColor="#fff"
                     android:background="@drawable/fecha_round"
+                    android:id="@+id/d3"
                     android:text="X"/>
                 <TextView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:gravity="center"
                     android:layout_marginRight="2dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textColor="#fff"
                     android:background="@drawable/fecha_round"
+                    android:id="@+id/d4"
                     android:text="J"/>
                 <TextView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:gravity="center"
                     android:layout_marginRight="2dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textColor="#fff"
                     android:background="@drawable/fecha_round"
+                    android:id="@+id/d5"
                     android:text="V"/>
                 <TextView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:gravity="center"
                     android:layout_marginRight="2dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textColor="#fff"
                     android:background="@drawable/fecha_round"
+                    android:id="@+id/d6"
                     android:text="S"/>
                 <TextView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:gravity="center"
                     android:layout_marginRight="2dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:textColor="#fff"
                     android:background="@drawable/fecha_round"
+                    android:id="@+id/d7"
                     android:text="D"/>
-
 
             </LinearLayout>
         </LinearLayout>
