--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -108,14 +108,22 @@
 
 
                     </LinearLayout>
+                    <com.facebook.login.widget.LoginButton
+                        android:id="@+id/login_button"
+                        android:background="@color/colorAccent"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="16dp"
 
+                        android:layout_gravity="center"
+                        />
                     <TextView
                         android:id="@+id/txt_recuperar_clave"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
                         android:layout_margin="@dimen/activity_vertical_margin"
-
+                        android:visibility="gone"
                         android:textColor="@color/colorPrimaryDark"
                         android:maxLines="1"
                         android:padding="12dp"
@@ -133,6 +141,7 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:text="@string/iniciar_sesion"
+        android:visibility="gone"
         android:textColor="#fff"
         android:padding="16dp"
         android:textAllCaps="false"
