--- a/app/src/main/res/layout/fragment_home__map.xml
+++ b/app/src/main/res/layout/fragment_home__map.xml
@@ -99,6 +99,13 @@
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:id="@+id/idEstacion"
+                        android:text="1"
+                        android:visibility="invisible"
+                        />
 
                     <ImageView
                         android:layout_width="wrap_content"
