--- a/app/src/main/res/layout/fragment_home__map.xml
+++ b/app/src/main/res/layout/fragment_home__map.xml
@@ -36,7 +36,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="visible"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
