--- a/app/src/main/res/layout/app_bar_inicio.xml
+++ b/app/src/main/res/layout/app_bar_inicio.xml
@@ -1,34 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     tools:context="pe.com.gmd.dokkuapp.view.activity.InicioActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        android:layout_height="match_parent">
+        <fragment
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="match_parent"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
+            android:gravity="center"
+            android:orientation="vertical" >
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@mipmap/mi_posicion" />
+        </LinearLayout>
+    </FrameLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00000000"
+        android:layout_marginTop="90dp">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btnSearchPlace"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:text="¿Buscar una direccion?"
+                android:drawableLeft="@mipmap/gas_search_place"
+                android:drawablePadding="-50dp"
+                android:scaleType="fitStart"
+                android:paddingLeft="15dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:background="#fff"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:textAllCaps="false"
+                android:elevation="2dp" />
 
-    <include layout="@layout/content_inicio" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
 
-</android.support.design.widget.CoordinatorLayout>
+        <ImageButton
+            android:id="@+id/btn_gps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_gps"
+            android:src="@mipmap/ubicacion_gris"
+            android:padding="16dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="120dp"
+            android:layout_marginRight="16dp"
+            android:elevation="6dp"/>
+
+
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingTop="17dp"
+            android:paddingBottom="17dp"
+            android:id="@+id/linear_enviar_ubicacion"
+            android:clickable="true"
+            android:background="@drawable/selector_button_verificar"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:text="@string/button_text_howtoGet"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btnRouteOne"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:textSize="18sp"
+                android:text="RD"
+                android:background="@drawable/button_route"
+                android:textAllCaps="false"
+                android:elevation="4dp" />
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btnRouteTwo"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:textSize="18sp"
+                android:layout_marginLeft="16dp"
+                android:text="A"
+                android:background="@drawable/button_route"
+                android:textAllCaps="false"
+                android:elevation="4dp" />
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btnRouteThree"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:textSize="18sp"
+                android:layout_marginLeft="16dp"
+                android:text="B"
+                android:background="@drawable/button_route"
+                android:textAllCaps="false"
+                android:elevation="4dp" />
+        </LinearLayout>
+
+    </RelativeLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_marginTop="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/transparent"/>
+
+</RelativeLayout>
