Mejoras ¿Cómo llegar? v0.2

--- a/app/src/main/res/menu/activity_inicio_drawer.xml
+++ b/app/src/main/res/menu/activity_inicio_drawer.xml
@@ -4,8 +4,8 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/principal"
-            android:icon="@drawable/ic_directions_bus_black_24dp"
-            android:title="Como llegar" />
+            android:icon="@drawable/ic_navigation"
+            android:title="¿Cómo llegar?" />
 
         <item android:title="Metropolitano">
             <menu>
