--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_weight="3"
-        android:background="@drawable/fondo_color_img"
+        android:background="?colorAccent"
         android:layout_height="match_parent">
         <ImageView
             android:layout_width="130dp"
